--- a/src/Components/Products/Products.css
+++ b/src/Components/Products/Products.css
@@ -30,3 +30,21 @@
     border-radius: 3px;
     display: block;
 }
+@media screen and (max-width:576px) {
+    .container{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .products-container{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .cart-container{
+        order: -1;
+        width: 80%;
+        height: 100vh;
+        margin: auto;
+        position: relative;
+        margin-bottom: 20px;
+    }
+}
