--- a/src/Components/Products/Products.css
+++ b/src/Components/Products/Products.css
@@ -25,10 +25,15 @@
 .chooseBtn{
     color: #222f3e;
     margin:10px auto;
-    padding: 5px 12px;
+    padding: 12px 12px;
     border: none;
     border-radius: 3px;
     display: block;
+    font-size: 18px;
+    border: 1px solid gray;
+}
+.chooseBtn:hover{
+    cursor: pointer;
 }
 @media screen and (max-width:576px) {
     .container{
